--- a/app/src/main/res/layout/fragment_stop_timetable.xml
+++ b/app/src/main/res/layout/fragment_stop_timetable.xml
@@ -40,7 +40,7 @@
                 <TableRow>
 
                     <TextView
-                        android:layout_width="70dp"
+                        android:layout_width="11dp"
                         android:layout_height="match_parent"
                         android:layout_column="0"
                         android:layout_weight="1"
@@ -128,6 +128,20 @@
                 app:layout_constraintStart_toEndOf="@+id/spinner_busstop"
                 app:layout_constraintTop_toBottomOf="@+id/busStopInput"
                 tools:text="@string/confirm_BusStop" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="48dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="166dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="167dp"
+                android:layout_marginBottom="5dp"
+                app:layout_constraintBottom_toTopOf="@+id/spinner_busstop"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/busStopInput" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
