--- a/app/src/main/res/layout/fragment_qrcode.xml
+++ b/app/src/main/res/layout/fragment_qrcode.xml
@@ -7,8 +7,8 @@
     tools:context=".fragments.QrCodeFragment"
     >
 
-    <Button
-        android:id="@+id/photobtn"
+    <TextView
+        android:id="@+id/scantext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -16,7 +16,8 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="100dp"
-        android:text="Scan QR Code"
+        android:text="@string/qr_camera"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -34,7 +35,7 @@
         android:text="History"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/photobtn" />
+        app:layout_constraintTop_toBottomOf="@+id/scantext" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
@@ -43,7 +44,6 @@
         android:layout_below="@+id/historytext"
         android:layout_marginTop="10dp"
         android:scrollbars="vertical"/>
-
 
 
 </RelativeLayout>
