--- a/app/src/main/res/layout/qrcodelistitem.xml
+++ b/app/src/main/res/layout/qrcodelistitem.xml
@@ -15,33 +15,36 @@
         <RelativeLayout
             android:id="@+id/rl"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            >
+            android:layout_height="276dp"
+            android:layout_margin="10dp">
 
 
             <ImageView
                 android:id="@+id/qrCodeImage"
-                android:layout_width="115dp"
-                android:layout_height="115dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginBottom="5dp"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="97dp"
 
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="97dp"
+                android:layout_marginBottom="5dp"
                 app:srcCompat="@drawable/ic_launcher_background" />
 
             <TextView
                 android:id="@+id/qrCodeName"
-                android:layout_width="76dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
+                android:layout_width="237dp"
+                android:layout_height="29dp"
+                android:layout_below="@+id/qrCodeImage"
+                android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="0dp"
-                android:layout_toEndOf="@+id/qrCodeImage"
+                android:layout_marginStart="76dp"
+                android:layout_marginTop="7dp"
+                android:layout_marginEnd="79dp"
                 android:text="TextView"
+                android:textAlignment="center"
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
@@ -50,12 +53,13 @@
                 android:layout_width="257dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/qrCodeName"
+                android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginEnd="0dp"
-                android:layout_toEndOf="@+id/qrCodeImage"
-                android:text="TextView" />
+                android:layout_marginStart="65dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginEnd="69dp"
+                android:text="TextView"
+                android:textAlignment="center" />
 
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
