--- a/app/src/main/res/layout/fragment_stop_timetable.xml
+++ b/app/src/main/res/layout/fragment_stop_timetable.xml
@@ -89,12 +89,15 @@
 
             <Spinner
                 android:id="@+id/spinner_busstop"
-                android:layout_width="234dp"
-                android:layout_height="24dp"
-                android:layout_marginStart="66dp"
+                android:layout_width="0dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/busStopInput" />
 
@@ -104,27 +107,22 @@
                 android:layout_height="43dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="24dp"
                 android:layout_marginBottom="16dp"
                 android:ems="10"
-                android:hint="@string/inputBusStop_BusStop"
+                android:hint="@string/busStopInputHint"
                 app:layout_constraintBottom_toTopOf="@+id/spinner_busstop"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/confirm_busstop"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.49" />
 
             <Button
                 android:id="@+id/confirm_busstop"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="38dp"
-                android:layout_marginEnd="16dp"
+                android:layout_width="87dp"
+                android:layout_height="45dp"
                 android:text="@string/confirm_BusStop"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBaseline_toBaselineOf="@+id/busStopInput"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/spinner_busstop"
-                app:layout_constraintTop_toBottomOf="@+id/busStopInput"
                 tools:text="@string/confirm_BusStop" />
 
             <ProgressBar
@@ -132,14 +130,15 @@
                 style="?android:attr/progressBarStyle"
                 android:layout_width="48dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="166dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="167dp"
-                android:layout_marginBottom="5dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toTopOf="@+id/spinner_busstop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/busStopInput" />
+                app:layout_constraintTop_toBottomOf="@+id/busStopInput"
+                app:layout_constraintVertical_bias="0.0" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
